--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Steve Rydz</title>
-</head>
-<body>
-  <h1>Steve Rydz</h1>
-  <p>Welcome to my amazing website!</p>
-</body>
-</html>
+---
+layout: default
+title: Home
+---
+
+{% for post in site.posts %}
+  <article class="blog-post">
+    <h2 class="blog-post__title">
+      <a href="{{ post.url }}">
+        {{ post.title }}
+      </a>
+    </h2>
+    <p class="blog-post__date">
+      {% assign d = post.date | date: "%-d"  %}
+      {% case d %}
+        {% when '1' or '21' or '31' %}{{ d }}st
+        {% when '2' or '22' %}{{ d }}nd
+        {% when '3' or '23' %}{{ d }}rd
+        {% else %}{{ d }}th
+      {% endcase %}
+      {{ post.date | date: "%B" }} 
+      {{ post.date | date: "%Y" }}
+    </p>
+    <div class="blog-post__content">
+      {{ post.excerpt }}
+    </div>
+  </article>
+{% endfor %}
