Add custom descriptions for each page and post

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+description: The personal website of Steve Rydz where he shares his thoughts, findings and opinions
 ---
 
 <h1>Posts</h1>
